--- a/src/StateEvalData/StateEvalData.csproj
+++ b/src/StateEvalData/StateEvalData.csproj
@@ -114,6 +114,9 @@
     <Compile Include="SEArtifactBundle.cs">
       <DependentUpon>StateEvalDataContext.tt</DependentUpon>
     </Compile>
+    <Compile Include="SEArtifactBundleEvidenceCollection.cs">
+      <DependentUpon>StateEvalDataContext.tt</DependentUpon>
+    </Compile>
     <Compile Include="SEArtifactBundleRejection.cs">
       <DependentUpon>StateEvalDataContext.tt</DependentUpon>
     </Compile>
