--- a/src/StateEval.Core.Test/StateEval.Core.Test.csproj
+++ b/src/StateEval.Core.Test/StateEval.Core.Test.csproj
@@ -67,6 +67,7 @@
     <Compile Include="EventServiceTest.cs" />
     <Compile Include="RubricRowAnnotationServiceTest.cs" />
     <Compile Include="EvalSessionServiceTest.cs" />
+    <Compile Include="RubricRowEvaluationServiceTest.cs" />
     <Compile Include="SamlTokenProcessorTests.cs" />
     <Compile Include="UserPromptServiceTest.cs" />
     <Compile Include="ArtifactBundleServiceTest.cs" />
