Creating a temprary branch to test something `

--- a/src/StateEval.Core.Test/StateEval.Core.Test.csproj
+++ b/src/StateEval.Core.Test/StateEval.Core.Test.csproj
@@ -62,6 +62,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="SelfAssessmentServiceTest.cs" />
     <Compile Include="AssignmentsServiceTest.cs" />
     <Compile Include="ReportServiceTest .cs" />
     <Compile Include="EventServiceTest.cs" />
